# downloader

./: .editorConfig  .env_example  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  404.html  README.md  components.json  config.toml  contact.html  eslint.config.js  index.html  install.html  latest.json  package.json  pnpm-lock.yaml  print.html  searchindex.js  searchindex.json  tailwind.config.ts  toc.html  toc.js  tsconfig.json  vite.config.ts
.github/workflows/: guide.yaml  release.yaml
dist-isolation/: index.html
guide/: book.toml
guide/src/: SUMMARY.md  contact.md  description.md  install.md
guide/theme/: highlight.js  index.hbs
guide/theme/custom/: onclick.js
public/: splashscreen.html
scripts/: ffmpeg.mjs  name.mjs  updater.mjs
src/: app.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  Tauri.macos.toml  Tauri.toml  Tauri.windows.toml
src-tauri/capabilities/: default.json  macos.json  updater.json  windows.json
src-tauri/data/: user.json  user_by_ies.json  video.json  video2.json  video3.json
src-tauri/icons/: icon.icns
src-tauri/js/: crypto-js.js  md5.js  x-bogus.js  x-tt-params.js
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/command/: douyin.rs  mod.rs  tools.rs
src-tauri/src/common/: date.rs  download.rs  error.rs  file.rs  filename.rs  header.rs  md5.rs  media.rs  mod.rs  run_js.rs  sm3.rs  vo.rs
src-tauri/src/config/: config.rs  constant.rs  mod.rs
src-tauri/src/core/: mod.rs  tools.rs
src-tauri/src/core/bilibili/: client.rs
src-tauri/src/core/douyin/: a_bogus.rs  api.rs  client.rs  dto.rs  endpoint.rs  mod.rs  token.rs  vo.rs  x_bogus.rs
src/atoms/: account.ts  config.ts  process.ts  sidebar.ts  task.ts  theme.ts
src/atoms/douyin/: user.ts  video.ts
src/components/common/: autocomplete.tsx  circular-progress.tsx  combobox.tsx  command-search.tsx  date-picker.tsx  dialog.tsx  icons.tsx  player.tsx  selector.tsx  toast.tsx  typography.tsx  updater.tsx  video-list.tsx  videos.tsx
src/components/panel/: collapse-menu-button-new.tsx  collapse-menu-button.tsx  footer.tsx  head-bar.tsx  menu-button.tsx  menu-new.tsx  menu.tsx  mode-toggle.tsx  sheet-menu.tsx  sidebar-toggle.tsx  sidebar.tsx  theme-toggle.tsx  user-nav.tsx
src/components/ui/: calendar.tsx  command.tsx  dialog.tsx  form.tsx  index.ts  sonner.tsx
src/config/: constant.ts  menu-list.ts  router.tsx
src/hooks/: use-config.ts  use-reset.ts  use-sidebar.ts  use-tasks.ts  use-theme.ts
src/layouts/: app.tsx  main.tsx
src/lib/: config.ts  file.ts  index.ts  log.ts  media.ts  route.ts  sqlite.ts  store.ts  time.ts  types.ts  url.ts  utils.ts  windows.ts
src/lib/tauri/: command.ts  index.ts
src/pages/app/: tray-menu.tsx  (+1 more)
src/service/: douyin.ts  index.ts
theme/custom/: onclick.js
(+20 files in other folders)
